# signet-filler

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.github/: CODEOWNERS
.github/workflows/: filler-ecr-cd.yml  rust-ci.yml
docs/superpowers/plans/: 2026-05-18-gouda-migration.md
docs/superpowers/specs/: 2026-05-18-gouda-migration-design.md
src/: allowance.rs  chain_token_pair.rs  config.rs  erc20.rs  fixed_pricing_client.rs  initialization.rs  lib.rs  metrics.rs  service.rs
src/filler_task/: in_flight.rs  initialization.rs  mod.rs  preflight.rs
src/pricing/: mod.rs  radius_client.rs  static_client.rs
