[package]
name = "signet-filler"
version = "0.1.0"
description = "Signet filler service for Parmigiana testnet"

edition = "2024"
rust-version = "1.88"
authors = ["init4"]
license = "Apache-2.0 OR MIT"

[[bin]]
name = "signet-filler"
path = "bin/filler.rs"

[dependencies]
init4-bin-base = { version = "0.18.0-rc.8", features = ["aws"] }
signet-constants = "0.16.0-rc.8"
signet-orders = "0.16.0-rc.8"
signet-tx-cache = "0.16.0-rc.8"
signet-types = "0.16.0-rc.8"

alloy = { version = "1.6.1", features = ["full", "signer-local"] }

backon = { version = "1.6.0", features = ["tokio-sleep"] }
eyre = "0.6.12"
reqwest = "0.12.28"
futures-util = "0.3.31"
itertools = "0.14.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time", "signal"] }
tokio-util = "0.7.18"
tracing = "0.1.44"

[patch.crates-io]
#init4-bin-base = { path = "/home/fraser/dev/init4/bin-base" }
signet-constants = { git = "https://github.com/init4tech/signet-sdk", branch = "main" }
signet-orders = { git = "https://github.com/init4tech/signet-sdk", branch = "main" }
signet-tx-cache = { git = "https://github.com/init4tech/signet-sdk", branch = "main" }
signet-types = { git = "https://github.com/init4tech/signet-sdk", branch = "main" }
