[package]
name = "signet-filler"
version = "0.1.0"
description = "Signet filler service for Parmigiana testnet"

edition = "2024"
rust-version = "1.88"
authors = ["init4"]
license = "Apache-2.0 OR MIT"

[[bin]]
name = "signet-filler"
path = "bin/filler.rs"

[dependencies]
init4-bin-base = { version = "0.18.0-rc.8", features = ["aws"] }
signet-constants = "0.16.0-rc.9"
signet-orders = "0.16.0-rc.9"
signet-tx-cache = "0.16.0-rc.9"
signet-types = "0.16.0-rc.9"

alloy = { version = "1.6.1", features = ["full", "signer-local"] }
axum = "0.8.8"

backon = { version = "1.6.0", features = ["tokio-sleep"] }
eyre = "0.6.12"
lru = "0.16.3"
metrics = "0.24.3"
reqwest = "0.12.28"
futures-util = "0.3.31"
itertools = "0.14.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time", "signal"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
