[package]
name = "signet-filler"
version = "0.1.0"
description = "Signet filler service for Gouda testnet"

edition = "2024"
rust-version = "1.88"
authors = ["init4"]
license = "Apache-2.0 OR MIT"

[[bin]]
name = "signet-filler"
path = "bin/filler.rs"

[dependencies]
init4-bin-base = { version = "0.18.0-rc.13", features = ["aws"] }
# TODO(filler-gouda): revert to crates.io once signet-constants 0.19.x is published.
# Publish cascade: signet-sdk #236 → bin-base #149 → storage #64 → node-components #144 → signet #105.
# Branch: signet-sdk@feat/gouda-known-chain.
# NOTE: Cargo.lock carries a duplicate signet-constants (0.16.3 via init4-bin-base,
# 0.19.0 via this git-pin) until bin-base #149 lands and init4-bin-base is bumped here.
signet-constants = { git = "https://github.com/init4tech/signet-sdk", rev = "ecce6a48a6af81c5f668c142b3a63452de02a146" }
signet-orders    = { git = "https://github.com/init4tech/signet-sdk", rev = "ecce6a48a6af81c5f668c142b3a63452de02a146" }
signet-tx-cache  = { git = "https://github.com/init4tech/signet-sdk", rev = "ecce6a48a6af81c5f668c142b3a63452de02a146" }
signet-types     = { git = "https://github.com/init4tech/signet-sdk", rev = "ecce6a48a6af81c5f668c142b3a63452de02a146" }

alloy = { version = "1.6.1", features = ["full", "signer-local"] }
axum = "0.8.8"
backon = { version = "1.6.0", features = ["tokio-sleep"] }
eyre = "0.6.12"
futures-util = "0.3.31"
itertools = "0.14.0"
lru = "0.16.3"
metrics = "0.24.3"
reqwest = "0.12.28"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time", "signal"] }
tokio-util = "0.7.18"
tracing = "0.1.44"

[dev-dependencies]
# git-pin matches production deps above (see TODO(filler-gouda)).
signet-zenith = { git = "https://github.com/init4tech/signet-sdk", rev = "ecce6a48a6af81c5f668c142b3a63452de02a146" }
